--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ psycopg2-binary==2.9.1
 PyJWT==2.1.0
 python-dotenv==0.19.0
 pytz==2021.1
+redis==3.5.3
 requests==2.26.0
+rq==1.10.0
 six==1.16.0
 SQLAlchemy==1.4.23
 urllib3==1.26.7
