--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.1
+defusedxml==0.7.1
 dnspython==2.1.0
 dominate==2.6.0
 elasticsearch==7.15.1
@@ -11,6 +12,7 @@ email-validator==1.1.3
 Flask==2.0.1
 Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==4.5.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
@@ -19,6 +21,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
 gunicorn==20.1.0
+httpie==2.6.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -26,11 +29,14 @@ langdetect==1.0.9
 Mako==1.1.5
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
+Pygments==2.10.0
 PyJWT==2.1.0
+PySocks==1.7.1
 python-dotenv==0.19.0
 pytz==2021.1
 redis==3.5.3
 requests==2.26.0
+requests-toolbelt==0.9.1
 rq==1.10.0
 six==1.16.0
 SQLAlchemy==1.4.23
