--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==4.5.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Markdown==0.3
 Flask-Migrate==3.1.0
 Flask-Moment==1.0.2
+Flask-PageDown==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
@@ -27,6 +29,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 langdetect==1.0.9
 Mako==1.1.5
+Markdown==3.3.4
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 Pygments==2.10.0
